# lightnet-firmware

./: .gitignore  .gitmodules  CLAUDE.md  README.md  REVIEW_DISCOVERY.md  animation-system-plan.md  api-postman-collection.json  compile_commands.json  mkdocs.yml  openapi.json  platformio.ini  platformio_local.ini.example  test_api_timing.py  uncrustify.cfg
.claude/: settings.local.json
controller/: platformio.ini
controller/src/: Config.hpp  PanelList.hpp  PanelsInitializer.cpp  PanelsInitializer.hpp  main.cpp
data/app/: 3rdpartylicenses.txt  index.html  main.js  polyfills.js  styles.css
docs/: animations.md  api.md  architecture.md  firmware.md  getting-started.md  hardware.md  index.md  ota.md  overview.md  testing.md  troubleshooting.md
docs/animations/: api.md  concepts.md  index.md  scene-authoring.md  types.md
docs/design/: scene-portability.md
driver/: platformio.ini
driver/src/: main.cpp  main.hpp
firmware/twiboot_for_arduino/: Makefile  README.md  main.c
firmware/twiboot_for_arduino/code_for_master/: slaveupdate.cpp  slaveupdate.h
firmware/twiboot_for_arduino/windows_bat_builds/: 1284p.bat  2560.bat  328p.bat  32A.bat  32u.bat  644p.bat
initializer/: platformio.ini
initializer/lib/WebSockets/: WebSockets.h
initializer/src/: main.cpp  main.h
lib/Lightnet/: LightnetBus.cpp  LightnetBus.hpp  LightnetPanel.cpp  LightnetPanel.hpp  LightnetPanelEdge.cpp  LightnetPanelEdge.hpp  LightnetPinger.cpp  LightnetPinger.hpp  PanelsController.cpp  PanelsInitializer.cpp  PanelsInitializer.hpp  Protocol.cpp  Protocol.hpp
lib/Lightnet/AppServer/: AppServer.cpp  AppServer.hpp
lib/Lightnet/Common/: AnimationTypes.hpp  ColorCompose.hpp  ColorRef.hpp  LightnetBus.cpp  LightnetBus.hpp  LightnetConfig.hpp  LightnetPanelEdge.cpp  LightnetPanelEdge.hpp  LightnetPinger.cpp  LightnetPinger.hpp  Palette.hpp  Protocol.cpp  Protocol.hpp  consts.hpp
lib/Lightnet/Controller/: AnimationRunner.cpp  AnimationRunner.hpp  AnimationScheduler.cpp  AnimationScheduler.hpp  AnimationServer.cpp  AnimationServer.hpp  AnimationService.hpp  AppearanceStore.cpp  AppearanceStore.hpp  Edge.hpp  FirmwareUpdateServer.cpp  FirmwareUpdateServer.hpp  PaletteStore.cpp  PaletteStore.hpp  Panel.cpp  Panel.hpp  PanelCoordMap.cpp  PanelCoordMap.hpp  PanelFlasher.cpp  PanelFlasher.hpp  PanelsController.cpp  PanelsController.hpp  PanelsInitializer.cpp  PanelsInitializer.hpp  SceneParser.cpp  SceneParser.hpp  ScenePlayer.cpp  ScenePlayer.hpp  SerialFirmwareReceiver.cpp  SerialFirmwareReceiver.hpp  TwibootClient.cpp  TwibootClient.hpp  library.json
lib/Lightnet/Core/: README.md  library.json
lib/Lightnet/Core/CApi/: CMakeLists.txt  README.md  anim_core_c.cpp  anim_core_c.h  controller_core_c.cpp  controller_core_c.h  controller_core_smoke.cpp  library.json  panel_core_c.cpp  panel_core_c.h  panel_core_smoke.cpp  smoke.cpp
lib/Lightnet/MessageApi/: MessageApi.cpp  MessageApi.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageServer.cpp  MessageServer.hpp
lib/Lightnet/Panel/: AnimationPlayer.cpp  AnimationPlayer.hpp  BootloaderBridge.hpp  LightnetPanel.cpp  LightnetPanel.hpp  LightnetPanelEdge.cpp  LightnetPanelEdge.hpp  RGBController.cpp  RGBController.hpp
lib/Lightnet/Sim/: LightnetBusSim.cpp  PanelsInitializerSim.cpp  (+6 more)
lib/Utils/: CircularQueue.cpp  CircularQueue.hpp  Debug.hpp  List.hpp
lib/WebSockets/: WebSockets.h  WebSocketsClient.cpp  WebSocketsClient.h  WebSocketsServer.cpp  WebSocketsServer.h
panel/: platformio.ini
panel/src/: Border.cpp  Border.hpp  Bus.cpp  Bus.hpp  Config.hpp  Panel.cpp  Panel.hpp  main.cpp
scripts/api-shell/: api-shell.js
src/: controller.config.hpp.example  main.cpp  panel.config.hpp.example
src/controller/: MirrorService.hpp  config.hpp  demo.cpp  demo.hpp  main.cpp  main.h  main.hpp
src/panel/: config.hpp  main.cpp  main.hpp
test/test_compositor/: test_main.cpp
test/test_config_codecs/: _sources.cpp  test_main.cpp
test/test_database/: MemoryRandomAccessStorage.hpp  _database_format.cpp  test_main.cpp
test/test_entry_id/: test_main.cpp
test/test_http_url/: test_main.cpp
test/test_json_inject/: test_main.cpp
test/test_main_loop_queue/: test_main.cpp
test/test_palette_codec/: _palette_codec.cpp  test_main.cpp
test/test_palette_meta/: test_main.cpp
test/test_palette_parser/: test_main.cpp
test/test_panel_anim/: test_main.cpp
test/test_panel_field/: test_main.cpp
test/test_panel_geometry/: test_main.cpp
test/test_panel_graph/: test_main.cpp
test/test_panel_selector/: test_main.cpp
test/test_panel_selector_parser/: test_main.cpp
test/test_runner_compile/: test_main.cpp
test/test_runner_math/: test_main.cpp
test/test_runner_spawn/: test_main.cpp
test/test_scene_capi/: _capi.cpp  _engine.cpp  test_main.cpp
test/test_scene_codec/: _codec.cpp  test_main.cpp
test/test_scene_duration/: test_main.cpp
test/test_scene_meta/: test_main.cpp
test/test_scene_player/: _engine.cpp  test_main.cpp
test/test_scene_writer/: _engine.cpp  test_main.cpp
test/test_simplejson/: test_main.cpp
test/test_spsc_queue/: test_main.cpp
test/test_topology/: test_main.cpp
tools/: README.md  flash_panels_serial.py  format_md_json.py  fw_version.py  generate_bin.py  sim_logger.py  upload_scenes.py
tools/anim-refgen/: refgen.cpp
tools/api-shell/: api-shell.js  mirror-dump.js  package-lock.json  test-scene.json
tools/performance-test/: README.md  perf_test.py
tools/scenes/: 01-ember-glow.json  02-ocean-breath.json  03-spectrum-drift.json  04-geo-wave-field.json  05-euclid-bloom.json  06-cross-currents.json  07-radial-converge.json  08-spin-cycle.json  09-depth-cascade.json  10-comet-trail.json  11-breathing-strata.json  12-aurora-veil.json  13-tidal-surge.json  14-hypno-rings.json  15-color-rain.json  16-sunrise.json  17-interference.json  18-nebula.json  19-lighthouse.json  20-monsoon.json  21-prism-sweep.json  22-ember-rise.json  23-deep-sea.json  24-pulse-bloom.json  25-galaxy-spin.json  26-borealis.json  27-cascade.json  28-ocean-depths.json  29-firestorm.json  30-grand-finale.json
(+289 files in other folders)
